Tue Sep  7 21:03:35 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_readable_real_p):
	  Pathname#readable_real?  translated from pathname.rb.

Mon Sep  6 23:07:25 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_world_readable_p):
	  Pathname#world_readable?  translated from pathname.rb.

Mon Sep  6 11:03:13 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* Fixed wrong check of missing functions. Patch by Adrian Quark.
	  ref #3400
	  The patch contains following comment:
	    This patch should avoid unnecessary incompatibility with future
	    versions of Openssl.  Changes suggested by bmaher_at_amazon.com.

Mon Sep  6 10:46:55 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* Fixed exception message for SSL post connection check failure. Patch
	  by Paul Betteridge. ref [Bug #3704]

Mon Sep  6 10:31:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (readline_s_get_line_buffer):
	  Readline.line_buffer should return locale string.
	  [ruby-dev:42184] #3791

Mon Sep  6 09:47:24 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* util.c (ruby_strtod): check there is at least 1 digit after
	  "0x" before ".". [ruby-dev:42183] #3790

Mon Sep  6 09:44:50 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* util.c (ruby_strtod): check integr overflow.
	  [ruby-dev:42180] #3789

Mon Sep  6 06:17:21 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_readable_p): Pathname#readable?
	  translated from pathname.rb.

Sun Sep  5 23:02:34 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_owned_p): Pathname#owned?
	  translated from pathname.rb.

Sat Sep  4 23:48:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_readlink): symlink target should be in
	  filesystem encoding.

Sat Sep  4 10:40:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (ruby_init_ext): export for golfers.

	* vm_core.h (rb_iseq_eval, rb_iseq_compile_with_option): ditto.
