@@ -724,6 +724,15 @@ path_readable_real_p(VALUE self)
 }
 
 /*
+ * See <tt>FileTest.setuid?</tt>.
+ */
+static VALUE
+path_setuid_p(VALUE self)
+{
+    return rb_funcall(rb_mFileTest, rb_intern("setuid?"), 1, get_strpath(self));
+}
+
+/*
  * == Pathname
  *
  * Pathname represents a pathname which locates a file in a filesystem.
@@ -966,4 +975,5 @@ Init_pathname()
     rb_define_method(rb_cPathname, "readable?", path_readable_p, 0);
     rb_define_method(rb_cPathname, "world_readable?", path_world_readable_p, 0);
     rb_define_method(rb_cPathname, "readable_real?", path_readable_real_p, 0);
+    rb_define_method(rb_cPathname, "setuid?", path_setuid_p, 0);
 }
